--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,29 +3,35 @@
   box-sizing: border-box;
 }
 
+:root {
+  --bg: #fbfaef;
+}
+
+html[data-theme="dark"] {
+  --bg: #121212;
+}
+
+
 /* Tags */
 html {
   overflow-y: scroll;
+  background-color: var(--bg);
 }
 
 body {
-  font-family: 'Helvetica', 'Calibri', sans-serif;
-  color: #f4f4f4;
-  padding: 0;
-  margin: 0;
-  background-image: radial-gradient(ellipse at 50% 40%, #006, #000);
-  background-image: -webkit-radial-gradient(ellipse at 50% 40%, #008, #000);
-  background-image: -moz-radial-gradient(ellipse at 50% 40%, #008, #000);
-  background-image: -o-radial-gradient(ellipse at 50% 40%, #008, #000);
-  background-image: -ms-radial-gradient(ellipse at 50% 40%, #008, #000);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  font-family: 'Inter' 'Helvetica', 'Calibri', sans-serif;
+  color: #2c2c2c;
+  padding: 50px;
+  margin: 0 auto;
+  max-width: 80ch;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  text-rendering: optimizeLegibility;
+  font-kerning: normal;
 }
 
 /* Header */
 header {
-  background: #23232d;
-  border-bottom: #0f0f19 4px solid;
   overflow: hidden;
 }
 
@@ -40,15 +46,7 @@ header a {
   font-weight: bold;
 }
 
-header #branding img{
-  float: left;
-  margin-top: -13px;
-  max-height: 50px;
-  margin-bottom: -13px;
-}
-
-header .header-right {
-  margin-right: 10px;
+header .right {
   float: right;
 }
 
@@ -69,7 +67,7 @@ button,
   border-radius: 4px;
   border: none;
   background-color: rgba(0, 0 , 0, 0);
-  color: #f4f4f4;
+  color: #2c2c2c;
   font-size: 18px;
   text-align: center;
   word-break: break-all;
@@ -87,12 +85,11 @@ a.anchor-button:focus {
 
 /* Links */
 a:link, a:visited {
-  color: #f4f4f4;
+  color: #2c2c2c;
 }
 
 a:hover, a:focus {
-  color: #00c6ff;
-  text-decoration: underline;
+  color: #8c0000;
 }
 
 a[disabled] {
@@ -102,27 +99,22 @@ a[disabled] {
 }
 
 a.active {
-  color: #00c6ff;
+  color: #8c0000;
 }
 
 h1 {
   margin: 0.67em 0em;
   padding: 0;
-  color: #00c6ff;
+  color: #8c0000;
   text-decoration: none;
 }
 
-h1 a:link, h1 a:visited {
-  color: #00c6ff;
-  text-decoration: underline;
-}
-
 h1 a:hover, h1 a:focus {
-  color: #f4f4f4;
+  color: #8c0000;
 }
 
 h2 {
-  color: #00c6ff;
+  color: #8c0000;
 }
 
 h2.resume-heading {
@@ -185,7 +177,7 @@ hr {
   margin-right: auto;
   border-style: inset;
   border-width: 1.5px;
-  border-color: #00c6ff;
+  border-color: #8c0000;
 }
 
 footer {
@@ -193,19 +185,13 @@ footer {
   bottom: 0;
   height: 48px;
   width: 100%;
-  color: #f4f4f4;
+  color: #2c2c2c;
   background: #23232d;
   border-top: #0f0f19 4px solid;
   text-align: center;
 }
 
 /* Classes */
-.container {
-  max-width: 80ch;
-  min-height: inherit;
-  margin: auto;
-}
-
 .inline {
   display: inline-block;
 }
@@ -223,36 +209,22 @@ footer {
   overflow: hidden;
 }
 
-.right-sidebar {
-  padding-bottom: 12px;
-  margin-left: 12px;
-  float: right;
-  width: 30%;
-  min-width: 180px;
-  text-align: center;
-  word-break: break-all;
-}
-
-.right-sidebar div {
-  padding: 0.5em;
-}
-
 .menu-content a {
   display: block;
   padding: 0.25em;
 }
 
 .primary-border {
-  border: 2px solid #00c6ff;
+  border: 2px solid #8c0000;
 }
 
 button.primary-border:hover,
 button.primary-border:focus,
 a.primary-border:hover,
 a.primary-border:focus {
-  border-color: #f4f4f4;
+  border-color: #2c2c2c;
   background-color: rgba(0, 0 , 44, 0.4);
-  color: #f4f4f4;
+  color: #2c2c2c;
 }
 
 .border-radius-16px {
