--- a/css/stylesheet.minified.css
+++ b/css/stylesheet.minified.css
@@ -1,334 +1,1 @@
-/* Global */
-* {
-  box-sizing: border-box;
-}
-
-/* Tags */
-html {
-  overflow-y: scroll;
-  background-color: #fbfaef;
-}
-
-body {
-  font-family: 'Inter' 'Helvetica', 'Calibri', sans-serif;
-  color: #2c2c2c;
-  padding: 50px;
-  margin: 0 auto;
-  max-width: 80ch;
-  hyphens: auto;
-  overflow-wrap: break-word;
-  text-rendering: optimizeLegibility;
-  font-kerning: normal;
-}
-
-/* Header */
-header {
-  overflow: hidden;
-}
-
-header a {
-  float: left;
-  padding: 12px;
-  line-height: 24px;
-  border-radius: 4px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-header a:first-child {
-  padding-left: 0px;
-}
-
-header .right {
-  float: right;
-}
-
-main {
-  /* padding-top should at least be h1 margin-top */
-  min-height: calc(100vh - 56px);
-  padding: 0.67em 4ch 0 4ch;
-  height: auto;
-}
-
-button,
-.anchor-button {
-  font-family: inherit;
-  cursor: pointer;
-  padding: 8px;
-  margin: 6px 8px 6px 0px;
-  width: 130px;
-  border-radius: 4px;
-  border: none;
-  background-color: rgba(0, 0 , 0, 0);
-  color: #2c2c2c;
-  font-size: 18px;
-  text-align: center;
-  word-break: break-all;
-  text-decoration: none;
-  display: inline-block;
-}
-
-button:hover,
-button:focus
-a.anchor-button:hover,
-a.anchor-button:focus {
-  background-color: rgba(0, 0 , 16, .6);
-  text-decoration: none;
-}
-
-/* Links */
-a:link, a:visited {
-  color: #2c2c2c;
-}
-
-a:hover, a:focus {
-  color: #8c0000;
-}
-
-a[disabled] {
-  pointer-events: none;
-  color: #bbbbbb;
-  border-color: #bbbbbb;
-}
-
-a.active {
-  color: #8c0000;
-}
-
-h1 {
-  margin: 0.67em 0em;
-  padding: 0;
-  color: #8c0000;
-  text-decoration: none;
-}
-
-h1 a:hover, h1 a:focus {
-  color: #8c0000;
-}
-
-h2 {
-  color: #8c0000;
-}
-
-h2.resume-heading {
-  margin-bottom: 0;
-}
-
-h3.resume-subheading {
-  padding: 0 0 0 2ch;
-  opacity: 0.8;
-}
-
-p {
-  text-indent: 2ch;
-}
-
-p.no-indent {
-  text-indent: 0;
-}
-
-pre {
- white-space: pre;
- margin: 1em 0em;
-}
-
-table {
-  margin: 1em 0px;
-}
-
-table.resume-coursework-table {
-  float: right;
-}
-
-table.resume-coursework-table td {
-  width: 130px;
-}
-
-td {
-  vertical-align: top;
-}
-
-td.resume-date-cell {
-  text-align: right;
-  min-width: 100px;
-}
-
-td.resume-description-cell {
-  width: 100%;
-}
-
-iframe {
-  width: 100%;
-  height: 400px;
-}
-
-hr {
-  display: block;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 1.5px;
-  border-color: #8c0000;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  height: 48px;
-  width: 100%;
-  color: #2c2c2c;
-  background: #23232d;
-  border-top: #0f0f19 4px solid;
-  text-align: center;
-}
-
-/* Classes */
-.inline {
-  display: inline-block;
-}
-
-.indent-padding {
-  padding-left: 2ch;
-}
-
-.vignette {
-  /* background: rgba(0, 0, 0, .40) no-repeat fixed center; */
-  overflow: auto;
-}
-
-.full {
-  overflow: hidden;
-}
-
-.menu-content a {
-  display: block;
-  padding: 0.25em;
-}
-
-.primary-border {
-  border: 2px solid #8c0000;
-}
-
-button.primary-border:hover,
-button.primary-border:focus,
-a.primary-border:hover,
-a.primary-border:focus {
-  border-color: #2c2c2c;
-  background-color: rgba(0, 0 , 44, 0.4);
-  color: #2c2c2c;
-}
-
-.border-radius-16px {
-  border-radius: 16px;
-}
-
-.border-radius-6px {
-  border-radius: 6px;
-}
-
-.border-radius-4px {
-  border-radius: 4px;
-}
-
-.frame {
-  float: left;
-  width: 100%;
-  padding: 14px;
-}
-
-.frame img {
-  border-radius: 14px 14px 6px 6px;
-  border-bottom: #0f0f19 4px solid;
-  width: 100%;
-  height: auto;
-}
-
-.frames-half {
-  float: left;
-  width: 50%;
-}
-
-span.resume-subheading {
-  font-size: 14px;
-}
-
-.resume-subheading {
-  padding: 0 0 0 1ch;
-  opacity: 0.8;
-}
-
-.subtitle {
-  margin: -18px 0px -8px 0px;
-  font-size: 14px;
-  padding-bottom: 24px;
-}
-
-.caption {
-  text-align: justify;
-  margin: 6px 12px;
-  padding: 0px 2px 4px 2px;
-}
-
-.center div, .center nav {
-  margin: 0;
-  position: absolute;
-  padding-top: 400px;
-  padding-bottom: 160px;
-  top: 40%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.reset {
-  clear: both;
-  height: 1px;
-  font-size: 1px;
-}
-
-.pagination {
-  position: relative;
-  width: 100%;
-  clear: both;
-  text-align: center;
-  margin: 20px 0 0 0;
-  padding-bottom: 56px;
-}
-
-.pagination a {
-  text-decoration: none;
-  margin: 2px;
-  padding: 8px 10px 5px 10px;
-}
-
-.vertical-menu a {
-  display: block;
-  padding: 14px 44px 10px 44px;
-  margin: 2vh 0px;
-  font-size: 18pt;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 6px;
-  background-color: rgba(0, 0 , 44, .4);
-}
-
-.horizontal-menu a:hover {
-  text-decoration: none;
-}
-
-/* For mobile phone: */
-@media screen and (max-width: 620px) {
-  main {
-    padding: 0.67em 2ch 0 2ch;
-  }
-  iframe {
-    max-height: 90vw;
-  }
-  .frames-half {
-    width:100%;
-  }
-}
+stylesheet.css
