--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,6 +59,8 @@ header a:first-child {
 
 .right-sidebar img {
   width: 300px;
+  border-radius: 8px;
+  filter: drop-shadow(1px 1px 2px gray);
 }
 
 main {
