--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Inter' 'Helvetica', 'Calibri', sans-serif;
+  font-family: 'Inter', 'Helvetica', 'Calibri', sans-serif;
   color: #2c2c2c;
   padding: 50px;
   margin: 0 auto;
