--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,6 +16,7 @@ body {
   padding: 50px;
   margin: 0 auto;
   max-width: 70ch;
+  box-sizing: content-box;
   height: 100%;
   hyphens: auto;
   overflow-wrap: break-word;
