--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -87,38 +87,28 @@ nav > a:first-child {
   height: 24px;
 }
 
-main {
-  /* padding-top should at least be h1 margin-top */
-  min-height: calc(100vh - 56px);
-  padding: 0.67em 4ch 0 4ch;
-  height: auto;
-}
-
 code, .monospace {
   font-family: 'JetBrains Mono', monospace;
 }
 
-button {
-  font-family: inherit;
-  cursor: pointer;
-  padding: 8px;
-  margin: 6px 8px 6px 0px;
-  width: 130px;
-  border-radius: 4px;
-  border: none;
-  background-color: rgba(0, 0 , 0, 0);
-  color: #2c2c2c;
-  font-size: 18px;
-  text-align: center;
-  word-break: break-all;
-  text-decoration: none;
-  display: inline-block;
+code {
+  padding: 0.2em 0.4em;
+  border-radius: 6px;
 }
 
-button:hover,
-button:focus {
-  background-color: rgba(0, 0 , 16, .6);
-  text-decoration: none;
+div.sourceCode, pre.shell, code {
+  background-color: #efeee0;
+  font-size: 85%;
+}
+
+div.sourceCode, pre.shell {
+  border-radius: 2px;
+  padding: 0.8rem;
+}
+
+div.sourceCode code, pre.shell code {
+  background-color: unset;
+  padding: 0px;
 }
 
 /* Links */
@@ -160,21 +150,8 @@ h2 {
   color: #8c0000;
 }
 
-h2.resume-heading {
-  margin-bottom: 0;
-}
-
-h3.resume-subheading {
-  padding: 0 0 0 2ch;
-  opacity: 0.8;
-}
-
 p {
   text-indent: 2ch;
-}
-
-p.no-indent {
-  text-indent: 0;
 }
 
 pre {
@@ -206,20 +183,6 @@ td {
   width: 96px;
 }
 
-td.resume-date-cell {
-  text-align: right;
-  min-width: 100px;
-}
-
-td.resume-description-cell {
-  width: 100%;
-}
-
-iframe {
-  width: 100%;
-  height: 400px;
-}
-
 hr {
   display: block;
   margin-top: 2px;
@@ -242,149 +205,7 @@ footer {
   text-align: center;
 }
 
-/* Classes */
-.inline {
-  display: inline-block;
-}
-
-.indent-padding {
-  padding-left: 2ch;
-}
-
-.vignette {
-  /* background: rgba(0, 0, 0, .40) no-repeat fixed center; */
-  overflow: auto;
-}
-
-.full {
-  overflow: hidden;
-}
-
-.menu-content a {
-  display: block;
-  padding: 0.25em;
-}
-
-.primary-border {
-  border: 2px solid #8c0000;
-}
-
-button.primary-border:hover,
-button.primary-border:focus,
-a.primary-border:hover,
-a.primary-border:focus {
-  border-color: #2c2c2c;
-  background-color: rgba(0, 0 , 44, 0.4);
-  color: #2c2c2c;
-}
-
-.border-radius-16px {
-  border-radius: 16px;
-}
-
-.border-radius-6px {
-  border-radius: 6px;
-}
-
-.border-radius-4px {
-  border-radius: 4px;
-}
-
-.frame {
-  float: left;
-  width: 100%;
-  padding: 14px;
-}
-
-.frame img {
-  border-radius: 14px 14px 6px 6px;
-  border-bottom: #0f0f19 4px solid;
-  width: 100%;
-  height: auto;
-}
-
-.frames-half {
-  float: left;
-  width: 50%;
-}
-
-span.resume-subheading {
-  font-size: 14px;
-}
-
-.resume-subheading {
-  padding: 0 0 0 1ch;
-  opacity: 0.8;
-}
-
 .subtitle {
-  margin: -18px 0px -8px 0px;
-  font-size: 14px;
+  margin-top: -18px;
   padding-bottom: 24px;
-}
-
-.caption {
-  text-align: justify;
-  margin: 6px 12px;
-  padding: 0px 2px 4px 2px;
-}
-
-.center div, .center nav {
-  margin: 0;
-  position: absolute;
-  padding-top: 400px;
-  padding-bottom: 160px;
-  top: 40%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.reset {
-  clear: both;
-  height: 1px;
-  font-size: 1px;
-}
-
-.pagination {
-  position: relative;
-  width: 100%;
-  clear: both;
-  text-align: center;
-  margin: 20px 0 0 0;
-  padding-bottom: 56px;
-}
-
-.pagination a {
-  text-decoration: none;
-  margin: 2px;
-  padding: 8px 10px 5px 10px;
-}
-
-.vertical-menu a {
-  display: block;
-  padding: 14px 44px 10px 44px;
-  margin: 2vh 0px;
-  font-size: 18pt;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 6px;
-  background-color: rgba(0, 0 , 44, .4);
-}
-
-.horizontal-menu a:hover {
-  text-decoration: none;
-}
-
-/* For mobile phone: */
-@media screen and (max-width: 620px) {
-  main {
-    padding: 0.67em 2ch 0 2ch;
-  }
-  iframe {
-    max-height: 90vw;
-  }
-  .frames-half {
-    width:100%;
-  }
 }
