--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,6 @@
 html {
   overflow-y: scroll;
   background-color: #fbfaef;
-  height: 100%;
 }
 
 body {
@@ -15,8 +14,6 @@ body {
   color: #2c2c2c;
   padding: 50px;
   margin: 0 auto;
-  height: 100%;
-  min-height: 100%;
   max-width: 80ch; /* This is ~70ch without border-box sizing */
   hyphens: auto;
   overflow-wrap: break-word;
@@ -70,15 +67,11 @@ nav > a:first-child {
   filter: drop-shadow(1px 1px 2px gray);
 }
 
-#content {
-  height: 100%;
-}
-
 .loading {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .spinner {
@@ -192,17 +185,6 @@ hr {
   border-style: inset;
   border-width: 1.5px;
   border-color: #8c0000;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  height: 48px;
-  width: 100%;
-  color: #2c2c2c;
-  background: #23232d;
-  border-top: #0f0f19 4px solid;
-  text-align: center;
 }
 
 .subtitle {
