--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,6 @@ html {
 
 body {
   font-family: 'Inter', 'Helvetica', 'Calibri', sans-serif;
-  color: #2c2c2c;
   padding: 50px;
   margin: 0 auto;
   max-width: 80ch; /* This is ~70ch without border-box sizing */
@@ -19,6 +18,10 @@ body {
   overflow-wrap: break-word;
   text-rendering: optimizeLegibility;
   font-kerning: normal;
+}
+
+html, em {
+  color: #2c2c2c;
 }
 
 /* Header */
@@ -131,7 +134,6 @@ a[disabled] {
 h1 {
   margin: 0.67em 0em;
   padding: 0;
-  color: #8c0000;
   text-decoration: none;
 }
 
@@ -139,12 +141,19 @@ h1 a:hover, h1 a:focus {
   color: #8c0000;
 }
 
-h2 {
+h1, h2, h3, h4, h5, h6, hr {
   color: #8c0000;
 }
 
 p {
   text-indent: 2ch;
+}
+
+em {
+  opacity: 0.8;
+  font-size: 75%;
+  font-style: normal;
+  font-weight: 400;
 }
 
 pre {
@@ -153,6 +162,7 @@ pre {
 }
 
 table {
+  width: 100%;
   margin: 1em 0px;
   border-spacing: 10px 6px;
 }
@@ -167,7 +177,6 @@ tr:nth-child(2) td {
 
 td {
   text-align: left;
-  vertical-align: top;
   padding-bottom: 4px;
   padding-top: 4px;
 }
@@ -184,10 +193,19 @@ hr {
   margin-right: auto;
   border-style: inset;
   border-width: 1.5px;
-  border-color: #8c0000;
+}
+
+.resume h2 {
+  margin-bottom: 0;
+}
+
+.resume td:last-child {
+  font-size: 85%;
 }
 
 .subtitle {
-  margin-top: -18px;
-  padding-bottom: 24px;
+  text-indent: 0;
+  font-size: 80%;
+  position: relative;
+  top: -8px;
 }
