disable ligatures in code

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -85,6 +85,7 @@ nav > a:first-child {
 
 code, .monospace {
   font-family: 'JetBrains Mono', monospace;
+  font-variant-ligatures: none;
 }
 
 code {
